fix: add step-by-step diagnostics to root automation script
The previous 'set -eu' script exited silently on failure with no
indication of which command failed. Now each step echoes progress
and reports the specific failure. Also uses ProcessBuilder with
redirectErrorStream to capture all output reliably.